@@ -87,10 +87,7 @@
         <ul>
             {% for feed in feeds %}
             <li data-yarr-feed="{{ feed.pk }}" {% if feed.count_unread %}class="yarr_feed_unread"{% endif %}>
-                <a href="{% url current_view feed_pk=feed.pk %}">
-                    {{ feed.title }}
-                        <span class="yarr_count_unread">{{ feed.count_unread }}</span>
-                </a>
+                <a href="{% url current_view feed_pk=feed.pk %}">{{ feed.title }}</a><span class="yarr_count_unread">{{ feed.count_unread }}</span>
             </li>
             {% endfor %}
         </ul>
